--- a/sakuli-admin-client/src/main/resources/src/styles.scss
+++ b/sakuli-admin-client/src/main/resources/src/styles.scss
@@ -1,110 +1,9 @@
 @import 'styles/variables';
 @import 'styles/forms';
+@import "styles/common";
+@import "styles/tab";
+@import "styles/modal";
+@import "styles/card";
+@import "styles/states";
+@import "styles/toast";
 @import '../node_modules/bootstrap/scss/bootstrap';
-
-/***
-  COMMON STYLES
- */
-
-@mixin shadow {
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-  border-radius: 0;
-}
-
-.shade {
-  @include shadow;
-}
-
-.padded-y {
-  padding-top: $padding-y;
-  padding-bottom: $padding-y;
-}
-
-.margin-y {
-  margin-top: $padding-y;
-  margin-bottom: $padding-y;
-}
-
-.grow {
-  flex-grow: 1;
-}
-
-.cursor-pointer {
-  cursor: pointer !important;
-}
-
-.text-overflow-ellipsis {
-  text-wrap: none;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis
-}
-
-/**
-  TABS
- */
-
-ngb-tabset[type="pills"] ul {
-  margin-top: $padding-y;
-  margin-bottom: $padding-y;
-}
-
-
-/**
-  MODAL
- */
-
-ngb-modal-window {
-  display: flex !important;
-
-  .modal-dialog {
-    width: auto;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    .modal-content {
-      max-width: 95vw;
-      display: flex;
-      flex-direction: column;
-      > * {
-        flex-grow: 1;
-        display: flex;
-        flex-direction: column;
-        .modal-body {
-          flex-grow: 1;
-          overflow: auto;
-        }
-      }
-    }
-  }
-}
-
-/**
-  CARDS
- */
-
-.card {
-  @include shadow;
-}
-
-/**
- STATES
- */
-
-.stroke-success {
-  stroke: theme-color("success");
-}
-
-.stroke-danger {
-  stroke: theme-color("danger");
-}
-
-.stroke-warning {
-  stroke: theme-color("warning");
-}
-
-.stroke-info {
-  stroke: theme-color("info");
-}
