--- a/sakuli-admin-client/src/main/resources/src/styles/_variables.scss
+++ b/sakuli-admin-client/src/main/resources/src/styles/_variables.scss
@@ -6,6 +6,7 @@ $enable-transitions:        true !default;
 $enable-hover-media-query:  false !default;
 $enable-grid-classes:       true !default;
 $enable-print-styles:       true !default;
+$enable-gradients:          true !default;
 
 $font-size-base: .95rem !default;
 
