--- a/sakuli-admin-client/src/main/resources/src/styles.scss
+++ b/sakuli-admin-client/src/main/resources/src/styles.scss
@@ -1,3 +1,5 @@
+
+
 @import 'styles/variables';
 @import 'styles/forms';
 @import "styles/common";
@@ -6,4 +8,5 @@
 @import "styles/card";
 @import "styles/states";
 @import "styles/toast";
+@import "styles/circle-indicator";
 @import '../node_modules/bootstrap/scss/bootstrap';
