fixed modal errors after ng update

--- a/sakuli-admin-client/src/main/resources/src/styles/modal.scss
+++ b/sakuli-admin-client/src/main/resources/src/styles/modal.scss
@@ -2,7 +2,7 @@
 ngb-modal-window {
   display: flex !important;
 
-  &.sa-text-modal {
+  &.sa-text-modal, &.SaTextModalComponent {
     .modal-content {
       width: 100vw;
     }
