--- a/sakuli-ui-client/src/main/resources/src/styles.scss
+++ b/sakuli-ui-client/src/main/resources/src/styles.scss
@@ -13,7 +13,7 @@
 
 
 $cdk-z-index-overlay-backdrop: 1000;
-$cdk-z-index-overlay-container: 1600;
+$cdk-z-index-overlay-container: 1030; // This is over the most elements expect the modals
 html {
   @include cdk-overlay();
 }
