--- a/sakuli-ui-client/src/main/resources/src/styles/_modal.scss
+++ b/sakuli-ui-client/src/main/resources/src/styles/_modal.scss
@@ -16,6 +16,7 @@ ngb-modal-window {
     justify-content: center;
     .modal-content {
       width: 95vw;
+      //height: 100vh;
       max-width: 100vw;
       display: flex;
       flex-direction: column;
